--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
     "eslint": ">= 8"
   },
   "dependencies": {
-    "@typescript-eslint/parser": "^7.0.2"
+    "@typescript-eslint/parser": ">= 7"
   }
 }
